@@ -6,3 +6,4 @@ people:
 
 Martin Vidner		<mvidner@suse.cz>
 Miquel van Smoorenburg	<miquels@cistron.nl>
+Todd R. Eigenschink	<todd@tekinteractive.com>
